--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/sspencervt/MyCaddy#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-validator": "^5.3.0",
+    "md5": "^2.2.1",
     "mongodb": "^3.1.1",
     "mongojs": "^2.6.0"
   },
