--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/sspencervt/MyCaddy.git"
   },
-  "author": "",
+  "author": "MyCaddyteam",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/sspencervt/MyCaddy/issues"
