--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "mycaddyserver.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node mycaddyserver.js"
-    "start": "mycaddyserver.js"
+    "dev": "node mycaddyserver.js",
+    "start": "node mycaddyserver.js"
   },
   "repository": {
     "type": "git",
